--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="avatar">
         <div class="avatar-placeholder">P</div>
       </div>
-      <h1>Hong Gildong</h1>
+      <h1>Hong12 4 5 Gildong</h1>
       <p class="subtitle">Frontend Developer</p>
       <p class="bio">I build clean, responsive web experiences.</p>
       <div class="social-links">
