Linkmap 편집기로 index.html 수정

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="card">
           <h3>Project Alpha</h3>
           <p>A responsive dashboard built with React and Tailwind CSS.</p>
-          <a href="#" class="link">View &rarr;</a>
+          <a href="#" class="link">View124 &rarr;</a>
         </div>
         <div class="card">
           <h3>Project Beta</h3>
